# overlay-x11

./: .gitignore  Cargo.toml  MONITORING.md  README.md  build.sh  install.sh  install_local.sh  overlay.yml.example  run.sh  stealth-overlay.service
src/: config.rs  evdev_monitor.rs  gemini.rs  main.rs  modifier_mapper.rs  prompt.rs  renderer.rs  shortcut_tracker.rs  stealth.rs  xinput2_monitor.rs
stealth_hook/: Cargo.toml
stealth_hook/src/: lib.rs
