[package]
name = "overlay-x11"
version = "1.0.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
libc = "0.2"
png = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
serde_yaml = "0.9"
evdev = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
